--- a/result_vi.html
+++ b/result_vi.html
@@ -23,7 +23,7 @@
 </style>
   <title>Document</title>
 </head>
-<body>
+<body id="bodyTag" class="vit" >
   <nav class="blue">
     <div class="nav-wrapper container" >
       <a href="#" class="brand-logo" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;" >Kết quả kiểm tra </a>
@@ -46,13 +46,13 @@
     </ul>
 
     <h6 style="color: #1775c2; background-color: #c7e0f5; padding: 10px;">
-      V-A-K-Ad Personality recognition test based on the sensory modalities - visual, auditory, kinesthetic and audio-digital - as used in Neuro-Linguistic Programming (NLP) 
+      Trắc nghiệm nhận diện tính cách V-A-K-Ad theo phương pháp Khoa học NLP (Lập trình Ngôn ngữ Tư duy)      
     </h6>
     <table id="my-table" class="highlight striped" >
       <tbody id="tableBody">
         <tr>
           <td rowspan="5" colspan="5" >
-            <div style="padding: 100px;text-align: center;">
+            <div style="padding: 55px;text-align: center;">
               <div class="preloader-wrapper big active">
                 <div class="spinner-layer spinner-blue-only">
                   <div class="circle-clipper left">
