--- a/en/index.html
+++ b/en/index.html
@@ -37,16 +37,28 @@
   <div class="container" >
     <div class="row">
       <div class="col s12 m12 l12">
+        <h6 style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color: #1775c2; background-color: #c7e0f5;padding: 20px; ">V-A-K-Ad personality recognition test based on the sensory
+          modalities – visual, auditory, kinesthetic, and audio-digital – as
+          used in Neuro-Linguistic Programming (NLP) </h6>
+        <p style="text-align: center;" >There are only 5 questions that will help you know exactly who you are.</p>
+
         <img class="col offset-s1 offset-m3 offset-l4 s10 m6 l4" src="../Images/logo_vi.png" alt="" style="margin-top: 10px;margin-bottom: 10px;"/>
       </div>
     </div>
     <div class="row">
-      <div class="col offset-s2 offset-m2 offset-l3 s8 m8 l6">
-        <h4 style="text-align: center;" >
-          Welcome To V-A-K-Ad
-        </h4>
+      <div class="col offset-s2 offset-m3 offset-l4 s8 m6 l4">
+        <button onclick="window.location.replace('login.html')" class="btn waves-effect waves-light" style="width: 100%;" type="submit" name="action"> Test now
+          <i class="material-icons right">send</i>
+        </button>
       </div>
     </div>
+    <!-- <div class="row">
+      <div class="col offset-s2 offset-m3 offset-l4 s8 m6 l4">
+        <button onclick="window.location.replace('login_vi.html')" class="btn waves-effect waves-light amber darken-4" style="width: 100%;" type="submit" name="action">Thử ngay
+          <i class="material-icons right">send</i>
+        </button>
+      </div>
+    </div> -->
   </div>
   <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
 
@@ -54,10 +66,10 @@
   <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-firestore.js"></script>
-  <script src="../Firebase/Firebase.js"></script> 
+  <script src="./Firebase/Firebase.js"></script> 
 
 
-  <!-- <script src="../js/index.js"></script> -->
+  <script src="../js/index.js"></script>
   <!-- <script src="./Login/email.js"></script> -->
   <!-- <script src="./Login/facebook.js" ></script> -->
   <!-- <script src="./Login/google.js"></script> -->
