--- a/vi/index.html
+++ b/vi/index.html
@@ -37,14 +37,18 @@
   <div class="container" >
     <div class="row">
       <div class="col s12 m12 l12">
+
+        <h6 style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color: #1775c2; background-color: #c7e0f5;padding: 20px;">Trắc nghiệm nhận diện tính cách V-A-K-Ad theo phương pháp Khoa học NLP (Lập trình Ngôn ngữ Tư duy) </h6>
+        <p style="text-align: center;" >Duy nhất 5 câu hỏi giúp biết chính xác BẠN thuộc tuýp người nào.<br/>BẠN sẽ vô cùng sửng sốt nhận ra những nét tính cách thực sự và năng lực tiềm ẩn của mình.</p>
+    
         <img class="col offset-s1 offset-m3 offset-l4 s10 m6 l4" src="../Images/logo_vi.png" alt="" style="margin-top: 10px;margin-bottom: 10px;"/>
       </div>
     </div>
     <div class="row">
-      <div class="col offset-s2 offset-m2 offset-l3 s8 m8 l6">
-        <h4 style="text-align: center;" >
-          Welcome To V-A-K-Ad
-        </h4>
+      <div class="col offset-s2 offset-m3 offset-l4 s8 m6 l4">
+        <button onclick="window.location.replace('login.html')" class="btn waves-effect waves-light amber darken-4" style="width: 100%;" type="submit" name="action">Thử ngay
+          <i class="material-icons right">send</i>
+        </button>
       </div>
     </div>
   </div>
@@ -57,7 +61,7 @@
   <script src="../Firebase/Firebase.js"></script> 
 
 
-  <!-- <script src="../js/index.js"></script> -->
+  <script src="../js/index.js"></script>
   <!-- <script src="./Login/email.js"></script> -->
   <!-- <script src="./Login/facebook.js" ></script> -->
   <!-- <script src="./Login/google.js"></script> -->
