--- a/vi/login.html
+++ b/vi/login.html
@@ -35,12 +35,14 @@
 
 <body id="bodyTag" class="vit" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ">
 
-  <div class="row" style="margin-top: 20px;">
+  <div class="row" >
     <!-- <div class="col m3 l3"> </div> -->
     <div class="col offset-m2 offset-l3 s12 m8 l6">
-      <div class="card-panel">
+      <div class="card-panel" style="padding: 0;" >
+        <h6 style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color: #1775c2; background-color: #c7e0f5;padding: 20px;">Trắc nghiệm nhận diện tính cách V-A-K-Ad theo phương pháp Khoa học NLP (Lập trình Ngôn ngữ Tư duy) </h6>
+        <p style="text-align: center;" >Duy nhất 5 câu hỏi giúp biết chính xác BẠN thuộc tuýp người nào.<br/>BẠN sẽ vô cùng sửng sốt nhận ra những nét tính cách thực sự và năng lực tiềm ẩn của mình.</p>
 <!-- ****************************  Logo  **************************** -->
-        <img class="col offset-l3 offset-m1 s12 m10 l6" src="./Images/logo_vi.png" alt="" style="margin-bottom: 10px;"/>
+<img class="col offset-s1 offset-m3 offset-l4 s10 m6 l4" src="../Images/logo_vi.png" alt="" style="margin-top: 0px;margin-bottom: 10px;"/>
 
 <!-- ****************************  SLIDER  **************************** -->
         <div class='row'>
@@ -130,16 +132,6 @@
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col offset-s1 offset-m1 offset-l2  s10 m10 l8">
-              <button class=" col s12 m12 l12 btn waves-effect black white-text waves-light" onclick="window.location.replace('/')" name="action">
-                <i class="material-icons left">language</i>
-                Thay đổi ngôn ngữ thành tiếng Anh
-
-                
-              </button>
-            </div>
-        </div>
         </div>
       </div>
     </div>
@@ -152,13 +144,13 @@
   <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-firestore.js"></script>
-  <script src="./Firebase/Firebase.js"></script> 
+  <script src="../Firebase/Firebase.js"></script> 
 
 
-  <script src="index.js"></script>
-  <script src="./Login/email.js"></script>
-  <script src="./Login/facebook.js" ></script>
-  <script src="./Login/google.js"></script>
+  <script src="../js/login.js"></script>
+  <script src="../Login/email.js"></script>
+  <script src="../Login/facebook.js" ></script>
+  <script src="../Login/google.js"></script>
 
 
   <!-- PDF GENERATOR -->
